[tool.poetry]
name = "pepe-story-checker"
version = "0.1.0"
description = "A FastAPI service for verifying Telegram stories."
authors = ["Danyl <boomiemaddox@gmail.com>"]
readme = "README.md"

[project]
name = "pepe-story-checker"
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = ">=3.10"
uvicorn = "^0.23.2"
fastapi = "^0.95.2"
telethon = "^1.30.3"
python-dotenv = "^1.0.0"
requests = "^2.32.0"
scikit-image = "^0.21.0"
opencv-python-headless = "^4.8.0"
pillow = "^9.5.0"
numpy = "^1.24.2"
nodeenv = "^1.7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"